force-app/main/default/objects/CLQ_Program__c/fields/ACSIIndicator__c.field-meta.xml
<CustomField>
    <fullName>ACSIIndicator__c</fullName>
    <label>ACSIIndicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>