force-app/main/default/objects/CLQ_Program__c/fields/AdvancedEDUIndicator__c.field-meta.xml
<CustomField>
    <fullName>AdvancedEDUIndicator__c</fullName>
    <label>AdvancedEDUIndicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>