force-app/main/default/objects/CLQ_Program__c/fields/Annual_Report_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Report_Due_Date__c</fullName>
    <label>Annual Report Due Date</label>
    <type>Date</type>
</CustomField>