force-app/main/default/objects/CLQ_Program__c/fields/Approval_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_End_Date__c</fullName>
    <description>Adding in for tracking Day Camp Application Approval start date</description>
    <label>Approval End Date</label>
    <type>Date</type>
</CustomField>