force-app/main/default/objects/CLQ_Program__c/fields/Approved_to_do_a_Provider_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Approved_to_do_a_Provider_Agreement__c</fullName>
    <description>Added for sending the checkbox to CPI/IPR</description>
    <label>ODJFS Requirement Met</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>