force-app/main/default/objects/CLQ_Program__c/fields/AR_Anniv_Date_120_Days_away__c.field-meta.xml
<CustomField>
    <fullName>AR_Anniv_Date_120_Days_away__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Annual Report- Anniversary Date greater than 120 days away</description>
    <inlineHelpText>Checking this box allows a program to create an Annual Report outside of the eligible time-frame.</inlineHelpText>
    <label>Late Annual Report Override</label>
    <type>Checkbox</type>
</CustomField>