force-app/main/default/objects/CLQ_Program__c/fields/AR_Ongoing_Reg_less_than_6_months_ago__c.field-meta.xml
<CustomField>
    <fullName>AR_Ongoing_Reg_less_than_6_months_ago__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Annual Report- Ongoing Registration less than 6 months ago</description>
    <inlineHelpText>Checking this box allows a program to create an Annual Report after it completed an Ongoing Registration in the last 6 months.</inlineHelpText>
    <label>Annual Report/Ongoing Exception Override</label>
    <type>Checkbox</type>
</CustomField>