force-app/main/default/objects/CLQ_Program__c/fields/BCI_FBI_Approved__c.field-meta.xml
<CustomField>
    <fullName>BCI_FBI_Approved__c</fullName>
    <label>Background Checks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>