force-app/main/default/objects/CLQ_Program__c/fields/ByPass_Annual_ReportNotAllowed_Provision__c.field-meta.xml
<CustomField>
    <fullName>ByPass_Annual_ReportNotAllowed_Provision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass_Annual_ReportNotAllowed_Provision</label>
    <type>Checkbox</type>
</CustomField>