force-app/main/default/objects/CLQ_Program__c/fields/Bypass_No_Registr_For_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Bypass_No_Registr_For_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass the limitation of not allowing an SUTQ Registration for an inactive  program status.</description>
    <inlineHelpText>Checking this box allows an inactive program to create an SUTQ registration.</inlineHelpText>
    <label>Inactive Override</label>
    <type>Checkbox</type>
</CustomField>