force-app/main/default/objects/CLQ_Program__c/fields/CLQ_2_Star_Reapplying_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_2_Star_Reapplying_Date__c</fullName>
    <label>2 Star Re-Register Date</label>
    <type>Date</type>
</CustomField>