force-app/main/default/objects/CLQ_Program__c/fields/CLQ_ACA_Accreditation_Verified__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ACA_Accreditation_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACA Accreditation Verified</label>
    <type>Checkbox</type>
</CustomField>