force-app/main/default/objects/CLQ_Program__c/fields/CLQ_ACA_Accredited__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ACA_Accredited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACA Accredited</label>
    <type>Checkbox</type>
</CustomField>