force-app/main/default/objects/CLQ_Program__c/fields/CLQ_ACA_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ACA_Verification_Date__c</fullName>
    <description>Auto-populates from Program Transaction</description>
    <label>ACA Verification Date</label>
    <type>Date</type>
</CustomField>