force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Accreditation_Verified__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Accreditation_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accreditation Verified</label>
    <type>Checkbox</type>
</CustomField>