force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Approval_Terminated_by_ODJFS__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approval_Terminated_by_ODJFS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approval Terminated by ODJFS - Added for Day Camp admins to terminate the application</description>
    <label>Approval Terminated by ODJFS</label>
    <type>Checkbox</type>
</CustomField>