force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Approved_Capacity_Under_2_5__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approved_Capacity_Under_2_5__c</fullName>
    <label>Approved Capacity Under 2 1/2 Years</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>