force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Are_you_Foster_Parent__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Are_you_Foster_Parent__c</fullName>
    <label>Are you Foster Parent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>