force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Asbestos__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Asbestos__c</fullName>
    <inlineHelpText>Do you have actual knowledge of the presence of any of the below identified materials on the property?</inlineHelpText>
    <label>Asbestos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>