force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Assigned_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Assigned_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Licensor/specialist assigned to the program.</inlineHelpText>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs_del</relationshipName>
    <type>Lookup</type>
</CustomField>