force-app/main/default/objects/CLQ_Program__c/fields/CLQ_BIRN__c.field-meta.xml
<CustomField>
    <fullName>CLQ_BIRN__c</fullName>
    <externalId>true</externalId>
    <label>Site IRN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>