force-app/main/default/objects/CLQ_Program__c/fields/CLQ_ByPassUtil__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ByPassUtil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPassUtil</label>
    <type>Checkbox</type>
</CustomField>