force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Calculated_Max_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Calculated_Max_Capacity__c</fullName>
    <description>The sum of square footage for all indoor approved primary space rooms marked as serving children Over 2 ½ divided by 35 +  the sum of the total Number of Children Allowed for all indoor approved primary space rooms where “Will children in this room be over or under 2 1/2?” is marked Under or Both</description>
    <label>Calculated Max Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>