force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Certificate_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Certificate_Expiry_Date__c</fullName>
    <formula>IF(
AND( NOT(ISBLANK(CLQ_Certificate_Issue_Date__c)), RecordType.Name = &apos;In-Home Aide&apos;, AND(
MONTH( CLQ_Certificate_Issue_Date__c ) = 2,
DAY( CLQ_Certificate_Issue_Date__c ) = 29,
NOT( 
OR( 
MOD( YEAR( CLQ_Certificate_Issue_Date__c ), 400 ) = 0, 
AND( 
MOD( YEAR( CLQ_Certificate_Issue_Date__c ), 4 ) = 0,
MOD( YEAR( CLQ_Certificate_Issue_Date__c ), 100 ) != 0
)
)
) 
)),
DATE( YEAR( CLQ_Certificate_Issue_Date__c ) + 2, 2, 28),
DATE( YEAR( CLQ_Certificate_Issue_Date__c ) + 2, MONTH( CLQ_Certificate_Issue_Date__c ), DAY( CLQ_Certificate_Issue_Date__c ))-1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate Expiry Date</label>
    <type>Date</type>
</CustomField>