force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Certificate_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Certificate_Issue_Date__c</fullName>
    <label>Certificate Issue Date</label>
    <type>Date</type>
</CustomField>