force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Certificate_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Certificate_Registration_Status__c</fullName>
    <label>Certificate/Registration Status del</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Not Certified</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Closed by System</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Withdrawn by Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>