force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Certification_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Certification_Status__c</fullName>
    <label>Certification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Not Certified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>