force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Continuous_License_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Continuous_License_Begin_Date__c</fullName>
    <label>Continuous License Begin Date</label>
    <type>Date</type>
</CustomField>