force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Continuous_License_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Continuous_License_Status__c</fullName>
    <defaultValue>&apos;started&apos;</defaultValue>
    <description>This field will tell the status of any continuous license transaction that is attached to the program.  It can contain either blank, &apos;initiated&apos; or &apos;approved&apos;, &apos;approved&apos; implies initiated.</description>
    <label>Continuous License Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>