force-app/main/default/objects/CLQ_Program__c/fields/CLQ_County_Parent_Guardian__c.field-meta.xml
<CustomField>
    <fullName>CLQ_County_Parent_Guardian__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County (Guardian)</label>
    <referenceTo>CLQ_County__c</referenceTo>
    <relationshipLabel>Programs (County)</relationshipLabel>
    <relationshipName>Programs2</relationshipName>
    <type>Lookup</type>
</CustomField>