force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Current_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Current_Capacity__c</fullName>
    <label>Current Capacity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>