force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Current_Rating__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Current_Rating__c</fullName>
    <description>To show this value to portal</description>
    <label>Current Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>