force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Current_Rating_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Current_Rating_Expiration_Date__c</fullName>
    <inlineHelpText>Portal visibility</inlineHelpText>
    <label>Current Rating Expiration Date</label>
    <type>Date</type>
</CustomField>