force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Day_Camp_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Day_Camp_Name__c</fullName>
    <inlineHelpText>Name of Day Camp as it appears on ACA Accreditation</inlineHelpText>
    <label>Day Camp Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>