force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Describe_Other_Toxic_Substances__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Describe_Other_Toxic_Substances__c</fullName>
    <label>Describe Other Toxic Substances</label>
    <type>TextArea</type>
</CustomField>