force-app/main/default/objects/CLQ_Program__c/fields/CLQ_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_End_Date__c</fullName>
    <description>End date related to Day Camp Program</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>