force-app/main/default/objects/CLQ_Program__c/fields/CLQ_First_Inspection_Due__c.field-meta.xml
<CustomField>
    <fullName>CLQ_First_Inspection_Due__c</fullName>
    <inlineHelpText>First/Next Provisional/Annual Inspection Due Date</inlineHelpText>
    <label>Next Inspection Scheduled</label>
    <type>Date</type>
</CustomField>