force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Foster_Children__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Foster_Children__c</fullName>
    <inlineHelpText>Are you currently caring for foster children?</inlineHelpText>
    <label>Foster Children</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>