force-app/main/default/objects/CLQ_Program__c/fields/CLQ_FS_ELI_FS__c.field-meta.xml
<CustomField>
    <fullName>CLQ_FS_ELI_FS__c</fullName>
    <label>FS ELI FS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>