force-app/main/default/objects/CLQ_Program__c/fields/CLQ_FS_Fri_End_time__c.field-meta.xml
<CustomField>
    <fullName>CLQ_FS_Fri_End_time__c</fullName>
    <description>Adding a new field to track the latest facility schedule time for particular day to pass on to CDC web. This field is not required to be displayed on the Program layout.</description>
    <label>FS Fri End time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>