force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Full_Day_Option_Offered__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Full_Day_Option_Offered__c</fullName>
    <label>Full Day Option Offered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>