force-app/main/default/objects/CLQ_Program__c/fields/CLQ_IHA_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_IHA_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>In-Home Aide Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Programs (Provider name)</relationshipLabel>
    <relationshipName>Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>