force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Is_Withdrawn__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Is_Withdrawn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Withdrawn?</label>
    <type>Checkbox</type>
</CustomField>