force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Jurisdiction__c</fullName>
    <description>This field tells what jurisdiction the program is under</description>
    <formula>if(RecordType.Name = &quot;Pre School&quot; || RecordType.Name = &quot;School Age Child Care&quot;, &quot;ODE&quot;,&quot;JFS&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jurisdiction</label>
    <type>Text</type>
</CustomField>