force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Last_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Last_Inspection_Date__c</fullName>
    <description>Track the last inspection visit date from Annual, Provisional and Compliance inspections</description>
    <label>Last Inspection Date</label>
    <type>Date</type>
</CustomField>