force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Last_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Last_Registration_Date__c</fullName>
    <label>Last Registration Date</label>
    <type>Date</type>
</CustomField>