force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Legacy_Program_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Legacy_Program_Number__c</fullName>
    <label>Legacy Program Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>