force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Level_of_Radon_Gas__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Level_of_Radon_Gas__c</fullName>
    <inlineHelpText>If Radon gas is presnt, indicate the level of gas in Pci/L. Typical radon gas measurements will be captured in a format similar to dollars and cents (ex. 0.04, 1.23, 0.81, etc.).</inlineHelpText>
    <label>Level of Radon Gas</label>
    <length>50</length>
    <type>Text</type>
</CustomField>